--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tanstack/react-query": "^4.29.16",
     "axios": "^1.8.3",
     "dotenv": "^16.4.7",
     "react": "^18.2.0",
