--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.0",
     "react-scripts": "^3.0.1",
+    "recharts": "^2.15.4",
     "sass": "^1.85.1",
     "scss": "^0.2.4",
     "web-vitals": "^2.1.4"
